Fix typos: rename Enviroment to Environment and CompaundProcedure to CompoundProcedure
Correct spelling across entire codebase:
- Enviroment -> Environment (class and all references)
- CompaundProcedure -> CompoundProcedure (class and all references)
- EnviromentMapAdapter -> EnvironmentMapAdapter